syntax = "proto3";
package logging;
// Define client types
enum ClientType {
  UNKNOWN = 0;
  WEB_CLIENT = 1;
  SERVER = 2;
}
service LogService {
  rpc SubscribeToLogs (SubscribeRequest) returns (stream LogMessage) {}
}

message SubscribeRequest {
  string client_id = 1;
  ClientType client_type = 2;
  string server_name = 3;
}

message LogMessage {
  optional string timestamp = 1;
  optional string level = 2;
  string message = 3;
  optional string target = 4;
  optional string thread_id = 5;
  optional string file = 6;
  optional string line = 7;
  optional string server_id = 8;
  optional string target_client_id = 9;
}
